--- a/index.html
+++ b/index.html
@@ -15,12 +15,32 @@
 </head>
 <body  style="background-color: #fc8f41">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="text-align: center">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+
+<div class="position-relative overflow-hidden p-3 p-md-1 m-md-1 text-center">
+    <div class="col-md-3" id="rightheader">
+        <section id="iconright">
+            <a href="./index.html">
+                <img src="img/logoorangeborder.png" alt="logo icon right">
+            </a>
+        </section>
+    </div>
+    <div class="col-md-6 p-lg-3 mx-auto my-3" id="centerheader">
+        <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
+        <h2 class="display-5">Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
+        <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
+    </div>
+    
+    <div class="product-device shadow-sm d-none d-md-block"></div>
+    <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+</div>
+
+<nav class="navbar navbar-expand-lg navbar-light text-center bg-light mx-md-3">
+    <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+    <div class="collapse navbar-collapse text-center" id="navbarNav">
+        <ul class="navbar-nav text-center">
             <li class="nav-item">
                 <a class="nav-link" href="./index.html">LOGO on TOUR / Home</a>
             </li>
@@ -34,24 +54,14 @@
                 <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./kontakt.html">Kontakt und Impressum</a>
+                <a class="nav-link" href="./kontakt.html">Kontakt</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div class="position-relative overflow-hidden p-3 p-md-1 m-md-1 text-center">
-    <div class="col-md-5 p-lg-3 mx-auto my-3">
-        <h1 class="display-4 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
-        <h2 class="display-5">Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
-        <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
-    </div>
-    <div class="product-device shadow-sm d-none d-md-block"></div>
-    <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-</div>
-
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center text-white overflow-hidden" id="logo">
+    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="logo">
         <div class="mb-3 pb-3">
             <h4 class="display-5 mb-4">LOGO on TOUR</h4>
             <ul class="lead">
@@ -76,7 +86,7 @@
             </section>
         </div>
     </div>
-    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center overflow-hidden" id="was">
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="was">
         <div class="mb-3 pb-3">
             <h4 class="display-5  mb-4">Logopädie, was ist das?</h4>
             <p class="lead">Die Logopädie beschäftigt sich mit den Teilbereichen
